# GFDCLS

./: CMakeLists.txt  LICENSE
include/: memory_manager.h  memory_type.h  memory_unit.h  string_processing.h
include/memory/: base_unit.h  grids.h  manager.h  subroutines.h  type.h  types.h  unit.h
src/: main.cpp  memory_manager.tpp  memory_type.cpp  memory_unit.tpp  string_processing.cpp
src/memory/: base_unit.cpp  manager.tpp  subroutines.cpp  type.cpp  types.cpp  unit.tpp
